--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "json-server": "^0.15.1"
   },
   "scripts": {
-    "start": "json-server --watch db.json -p 3001 & open http://localhost:3001/pups & react-scripts start && fg"
+    "start": "react-scripts start",
+    "server": "json-server --watch db.json -p 3001"
   },
   "eslintConfig": {
     "extends": [
